--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .products {
 
-	margin: 0 auto;
-	width: 50%;
+	// margin: 0 auto;
+	// width: 50%;
 
 	table {
 		border-collapse: collapse;
