--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 				<li><a href="http://.../faq">Questions</a></li>
 				<li><a href="http://.../news">News</a></li>
 				<li><a href="http://.../contact">Contact</a></li>
+				<li id="time"><%= @time %></li>
 			</ul>
 		</div>
 		<div id="main">
